--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,8 @@
     -->
     <title>React App</title>
   </head>
-  <body>
+  <body data-bs-spy="scroll" data-bs-target=".navbar"
+  data-bs-smooth-scroll="true" tabindex="0">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
